DashboardController implémenté